# linux-cmake-demo

./: CMakeLists.txt
src/: main.cpp
